scripts/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: newborn-nest
  labels:
    name: newborn-nest
    environment: production
