scripts/kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: newborn-nest
  labels:
    app: newborn-nest
    component: frontend
spec:
  type: LoadBalancer
  selector:
    app: newborn-nest
    component: frontend
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
